--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: Crazy cat, boring human
 author: df1
 simple_search: http://google.com/search
 description:
-facebook_user: s911131
+# facebook_user: orokana.bl
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -59,7 +59,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: df1
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -73,7 +73,7 @@ twitter_show_follower_count: false
 twitter_tweet_button: true
 
 # Google +1
-google_plus_one: false
+google_plus_one: true
 google_plus_one_size: medium
 
 # Google Plus Profile
